# score-tracker

./: .gitignore
backend/: Cargo.toml
backend/backend_bin/: Cargo.toml  build.rs
backend/backend_bin/src/: main.rs
backend/backend_lib/: Cargo.toml
backend/backend_lib/src/: lib.rs  serialization.rs
backend/backend_lib/src/connection/: error.rs  message.rs  mod.rs
backend/backend_lib/src/state/: error.rs  mod.rs  server_state.rs  session_data.rs
backend/backend_lib/src/state/room/: member_state.rs  mod.rs  pot.rs  wager.rs
backend/backend_lib/src/tests/: message_handling.rs  mod.rs
backend/schemagen/: Cargo.toml
backend/schemagen/src/: lib.rs
backend/type_schemas/: client_message.json  member_state.json  pot.json  server_message.json  wager.json  wager_outcome.json
frontend/score_tracker/: .env  .env.development  .prettierrc.json  bun.lockb  generate_types.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/score_tracker/.react-router/types/: +routes.ts
frontend/score_tracker/.react-router/types/app/routes/+types/: main_menu.ts  no_server_connection.ts  room.ts
frontend/score_tracker/app/: app.css  root.tsx  routes.ts  types.ts  utils.ts
frontend/score_tracker/app/backend/: index.ts  messages.ts  types.ts
frontend/score_tracker/app/components/: makePot.tsx  makeWager.tsx  member.tsx  memberInfo.tsx  pot.tsx  wager.tsx
frontend/score_tracker/app/routes/: home.tsx  layout.tsx  main_menu.tsx  no_server_connection.tsx  room.tsx  test.tsx
