[package]
name = "backend_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
env_logger = "0.11.8"
futures = "0.3.31"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.27"
parking_lot = "0.12.4"
password-hash = "0.5.0"
rand = "0.8.0"
rstest = "0.26.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
schemars = "1"
